# alembic-partition

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 28c430440d10_part.py  c6a55365e054_table.py  f9f39b7e37e9_auth_history.py
src/core/: config.py
src/db/: postgres.py
src/db/models/: __init__.py  authentication_history.py  user.py
